--- a/test1/App.config
+++ b/test1/App.config
@@ -14,5 +14,8 @@
   </entityFramework>
   <connectionStrings>
     <add name="Test11Context" connectionString="metadata=res://*/Test1DB.csdl|res://*/Test1DB.ssdl|res://*/Test1DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EB9I7L7\SQLEXPRESS;initial catalog=Test11;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Test11Contex" connectionString="metadata=res://*/test11DB.csdl|res://*/test11DB.ssdl|res://*/test11DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EB9I7L7\SQLEXPRESS;initial catalog=Test11;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Test11Entities" connectionString="metadata=res://*/test11DB.csdl|res://*/test11DB.ssdl|res://*/test11DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EB9I7L7\SQLEXPRESS;initial catalog=Test11;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Test11Entities1" connectionString="metadata=res://*/Test1Db.csdl|res://*/Test1Db.ssdl|res://*/Test1Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EB9I7L7\SQLEXPRESS;initial catalog=Test11;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
