--- a/test1/test1.csproj
+++ b/test1/test1.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="admin.cs">
-      <DependentUpon>Test1DB.tt</DependentUpon>
+      <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -79,22 +79,31 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuPizza.cs">
+      <DependentUpon>Test1Db.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test1DB.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Test1DB.Context.tt</DependentUpon>
+    <Compile Include="ShopBasket.cs">
+      <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
-    <Compile Include="Test1DB.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Test1DB.tt</DependentUpon>
+    <Compile Include="SizePizza.cs">
+      <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
-    <Compile Include="Test1DB.Designer.cs">
+    <Compile Include="Test1Db.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Test1DB.edmx</DependentUpon>
+      <DependentUpon>Test1Db.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Test1Db.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test1Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Test1Db.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test1Db.edmx</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -124,31 +133,31 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EntityDeploy Include="Test1DB.edmx">
+    <EntityDeploy Include="Test1Db.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Test1DB.Designer.cs</LastGenOutput>
+      <LastGenOutput>Test1Db.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Test1DB.edmx.diagram">
-      <DependentUpon>Test1DB.edmx</DependentUpon>
+    <None Include="Test1Db.edmx.diagram">
+      <DependentUpon>Test1Db.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Test1DB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Test1DB.Context.cs</LastGenOutput>
-      <DependentUpon>Test1DB.edmx</DependentUpon>
-    </Content>
-    <Content Include="Test1DB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Test1DB.edmx</DependentUpon>
-      <LastGenOutput>Test1DB.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="Test1Db.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Test1Db.edmx</DependentUpon>
+      <LastGenOutput>Test1Db.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Test1Db.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Test1Db.edmx</DependentUpon>
+      <LastGenOutput>Test1Db.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
