--- a/test1/test1.csproj
+++ b/test1/test1.csproj
@@ -61,6 +61,9 @@
     <Compile Include="admin.cs">
       <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
+    <Compile Include="Doctor.cs">
+      <DependentUpon>Test1Db.tt</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,15 +82,21 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
-    <Compile Include="MenuPizza.cs">
+    <Compile Include="Form4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form4.Designer.cs">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Pachienti.cs">
+      <DependentUpon>Test1Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PriemPacientov.cs">
       <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShopBasket.cs">
-      <DependentUpon>Test1Db.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SizePizza.cs">
+    <Compile Include="sysdiagrams.cs">
       <DependentUpon>Test1Db.tt</DependentUpon>
     </Compile>
     <Compile Include="Test1Db.Context.cs">
@@ -113,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form4.resx">
+      <DependentUpon>Form4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
